packages/test-cases/cases/apis/invalid-types/query/w3/Query/index.ts
import {
  Input_boolMethod,
  Input_intMethod,
  Input_uIntMethod,
  Input_bytesMethod,
  Input_arrayMethod
} from "./serialization";

export {
  Input_boolMethod,
  Input_intMethod,
  Input_uIntMethod,
  Input_bytesMethod,
  Input_arrayMethod
};
